# Home_work_web_10

my_project/: pyproject.toml
my_project/hw_project/: db.sqlite3
my_project/hw_project/hw_project/: settings.py  urls.py
my_project/hw_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
my_project/hw_project/quotes/migrations/: 0002_note_tag_user_tag_tag_of_username_note_tags_and_more.py  0003_author_user_delete_note.py  0004_remove_tag_tag_of_username_alter_author_id_and_more.py  0005_remove_tag_tag_of_username_alter_author_id_and_more.py  0006_alter_quote_tags.py  0007_alter_quote_tags.py  0008_remove_quote_tags_tag_quotes.py
my_project/hw_project/quotes/static/quotes/: style.css
my_project/hw_project/quotes/templates/quotes/: author_detail.html  base.html  index.html
my_project/hw_project/quotes/templatetags/: extract.py
my_project/hw_project/users/: forms.py  views.py
my_project/hw_project/utils/: add_quotes_to_mongo.py  migration.py
