[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Serghii777 <142201494+Serghii777@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
