[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Serghii777 <142201494+Serghii777@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
django-taggit = "^5.0.1"
bson = "^0.5.10"
pymongo = "^4.6.3"
certifi = "^2024.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
